...
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4md-K2-0eD">
                                        <rect key="frame" x="135" y="1" width="32" height="48"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="48" id="Czu-xZ-GKm"/>
                                        </constraints>
                                        <state key="normal" image="filter"/>
                                        <connections>
                                            <segue destination="TVH-RF-9Fl" kind="presentation" identifier="popVC" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="L6H-bp-kuz"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Newest" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="BV4-ge-8lh">
                                        <rect key="frame" x="192" y="18.5" width="42.5" height="14.5"/>
...
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fks-Og-h1J" userLabel="ContainerView">
                                <rect key="frame" x="36" y="182" width="302" height="302"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="From" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XkB-B0-Klx">
                                        <rect key="frame" x="20" y="60" width="263" height="40"/>
                                        <accessibility key="accessibilityConfiguration" identifier="fromTextLabel"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="XG3-c8-EYz"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <outlet property="delegate" destination="TVH-RF-9Fl" id="cDD-rT-wSI"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="To" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="T8i-Qo-fb3">
                                        <rect key="frame" x="20" y="130" width="263" height="40"/>
                                        <accessibility key="accessibilityConfiguration" identifier="toTextLabel"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <outlet property="delegate" destination="TVH-RF-9Fl" id="BZv-Lf-MLR"/>
                                        </connections>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nyx-Sc-1Xc">
                                        <rect key="frame" x="10" y="242" width="282" height="50"/>
                                        <color key="backgroundColor" red="0.098039215686274508" green="0.53725490196078429" blue="0.43137254901960786" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="closeButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="B8U-Jw-b38"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <state key="normal" title="CLOSE">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
