...
        self.page = 1
        if isYearListDescending {
            currentPaginYear = maxYear
            sortDescendingLabel.text = "Newest"
        } else {
            currentPaginYear = minYear
            sortDescendingLabel.text = "Oldest"

        }
    }
    
}

...
